# gen_alpha_dictionary

./: .gitignore  Cargo.toml  README.md
learning/tests_learn/: Cargo.toml
learning/tests_learn/src/: main.rs
number_guesser/: Cargo.toml
number_guesser/src/: main.rs
other/learning/function_learn/src/: main.rs
other/learning/generics_learn/: Cargo.toml
other/learning/generics_learn/src/: main.rs
other/learning/match_learn/src/: main.rs
other/projects/minigrep/src/: lib.rs
projects/median_mode/src/: main.rs
projects/minigrep/src/: main.rs
projects/pig_latin/src/: main.rs
sigma_dict/: dict.json
sigma_dict/src/: main.rs
src/: lib.rs  main.rs
struct_learn/src/: main.rs
